css/main.css
/*
* sort most specific to least specific top to bottom.
 */

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap');

:root {
    --light-blue: #328cc1;
    --dark-blue: #083c5d;
    --super-dark-blue: #1d2731;
    --orange: #d98310;
    --grey: #aaaaaa;
    /*note the space between the orange bar and the book card / book card and right edge of the screen.
    keep them both the same!*/
    --grid-gap: 20px;
    /*common used padding throughout this file*/
    --text-padding: 5px
}

h1, h2, h3, h4, h5 {
    font-family: 'Roboto Mono', monospace;
    /*margin: 0;*/
}

#content-bar {
    /*the orange area*/
    grid-area: contentBar;
    padding: var(--text-padding);
    background: var(--orange);
    word-break: break-word;
    width: 200px;
}

#header {
    display: flex;
    justify-content: center;
    background: var(--light-blue);
    width: 100%;
    height: 10vh;
}

#main-container {
    /*the grey area*/
    display: grid;
    grid-template-areas: "contentBar bookDisplay";
    grid-template-columns: auto auto;
    /*grid-column-gap: var(--grid-gap);*/
    background: var(--grey);
    width: 100%;
    height: auto;
}

#footer {
    display: flex;
    justify-content: center;
    background: var(--super-dark-blue);
    width: 100%;
    height: auto;
    text-align: center;
}

#main-book-display {
    /*the white area*/
    background-color: whitesmoke;
    padding: var(--grid-gap);
    margin: var(--grid-gap);
    grid-area: bookDisplay;
    min-height: 900px;

    /*multiple different ways to declare box shadow to ensure it works on most* browsers*/
    -webkit-box-shadow: -4px 10px 9px -6px rgba(0,0,0,0.75);
    -moz-box-shadow: -4px 10px 9px -6px rgba(0,0,0,0.75);
    box-shadow: -4px 10px 9px -6px rgba(0,0,0,0.75);
}

#main-book-display > img {
    border: var(--dark-blue) 5px solid;
    /*below allows the words to wrap around the imagle as if its a circle. remove to see what the "square" image looks like*/
    shape-outside: circle();
    float: left;
    height: 250px;
    width: 250px;
    border-radius: 135px;
    margin: 5px;
}

.book-card {
    /*display: flex;*/
    background-color: whitesmoke;
    flex-direction: column;
    align-items: center;
    height: calc(100% - var(--grid-gap));
    border: 5px solid var(--super-dark-blue);
}

.book-cover {
    background-color: white;
}

.card-summary {
    color: whitesmoke;
    background: var(--super-dark-blue);
}

.card-title {
    width: 100%;
    height: auto;
}

.card-title > h1 {
    padding: var(--text-padding);
}

.card-description {
    width: 100%;
    height: auto;
    background: var(--light-blue);
}

.card-description > h4, .card-description > h5 {
    padding: var(--text-padding);
}

.book-title > h3 {
    margin: 0;
}

.footer-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80vw;
}

.footer-main > h3 {
    margin: 0;
    color: whitesmoke;
}

.footer-main > h5 {
    color: whitesmoke;
}

.footer-main > small > h5 {
    color: var(--orange);
}

.icon-links {
    display: flex;
    justify-content: space-around;
    color: var(--orange);
}

.title > h1 {
    font-size: 3em;
    color: var(--super-dark-blue);
}

